<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strHome" />

    <EditText
        android:id="@+id/edtOperando1"
        android:hint="@string/strOperando1"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="teste" />

    <EditText
        android:id="@+id/edtOperando2"
        android:hint="@string/strOperando2"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="teste" />

    <Button
        android:id="@+id/btnSoma"
        android:text="@string/strSoma"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnSubtracao"
        android:text="@string/strSubtracao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnMultiplicacao"
        android:text="@string/strMultiplicacao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnDivisao"
        android:text="@string/strDivisao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>